# cppcourse-brunel

./: CMakeLists.txt  README.md  README.md~  brain.cpp  brain.h  main.cpp  neuron.cpp  neuron.h  simulation.cpp  simulation.h  spike_times_figD.txt  unit_test.cpp
html/: annotated.html  brain_8h_source.html  classBrain-members.html  classBrain.html  classNeuron-members.html  classNeuron.html  classSimulation-members.html  classSimulation.html  classes.html  files.html  functions.html  functions_func.html  index.html  md_README.html  neuron_8h_source.html  pages.html  simulation_8h_source.html
html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  search.js
latex/: annotated.tex  classBrain.tex  classNeuron.tex  classSimulation.tex  md_README.tex  refman.tex
